<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.ulmc.gwt</groupId>
    <artifactId>sandbox</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>client</module>
        <module>server</module>
        <!--<module>wrapper</module>-->
    </modules>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <springBootVersion>1.4.1.RELEASE</springBootVersion>
        <start-class>ru.ulmc.gwt.sandbox.Application</start-class>
    </properties>

    <repositories>
        <!--<repository>
            <id>sencha-gxt-repository</id>
            <name>Sencha GXT Repository</name>
            <url>https://maven.sencha.com/repo/gxt-gpl-release</url>
        </repository>-->
    </repositories>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <gwt.draftCompile>false</gwt.draftCompile>
                <gwt.optimizationLevel>9</gwt.optimizationLevel>
                <gwt.moduleSuffix></gwt.moduleSuffix>
                <gwt.style>OBF</gwt.style>
            </properties>
        </profile>
        <profile>
            <id>develop</id>
            <properties>
                <gwt.draftCompile>true</gwt.draftCompile>
                <gwt.optimizationLevel>0</gwt.optimizationLevel>
                <gwt.moduleSuffix>_dev</gwt.moduleSuffix>
                <gwt.style>PRETTY</gwt.style>
            </properties>
        </profile>
    </profiles>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springBootVersion}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--<dependency>
                <groupId>ru.ulmc.gwt</groupId>
                <artifactId>resty</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ru.ulmc.gwt</groupId>
                <artifactId>gxt</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>-->
            <dependency>
                <groupId>ru.ulmc.gwt</groupId>
                <artifactId>legacy-gxt</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ru.ulmc.gwt</groupId>
                <artifactId>resty-with-legacy</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>ru.ulmc.gwt</groupId>
                <artifactId>common</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>ru.ulmc.gwt</groupId>
                <artifactId>wrapper</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.sencha.gxt</groupId>
                <artifactId>gxt</artifactId>
                <version>4.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.extjs</groupId>
                <artifactId>gxt</artifactId>
                <version>2.3.1a-gwt22</version>
            </dependency>
            <dependency>
                <groupId>com.sencha.gxt</groupId>
                <artifactId>gxt-theme-triton</artifactId>
                <version>4.0.0</version>
            </dependency>

            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-servlet</artifactId>
                <version>2.7.0</version>
            </dependency>
            <dependency>
                <groupId>org.fusesource.restygwt</groupId>
                <artifactId>restygwt</artifactId>
                <version>2.2.0</version>
            </dependency>
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>jsr311-api</artifactId>
                <version>1.1.1</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.8.3</version>
            </dependency>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-dev</artifactId>
                <version>2.7.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-user</artifactId>
                <version>2.7.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>2.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin.polymer</groupId>
                <artifactId>vaadin-gwt-polymer-elements</artifactId>
                <version>1.2.1.0</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${springBootVersion}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.5.1</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <version>2.7.0</version>
                    <configuration>
                        <logLevel>INFO</logLevel>
                        <draftCompile>${gwt.draftCompile}</draftCompile>
                        <optimizationLevel>${gwt.optimizationLevel}</optimizationLevel>
                        <disableCastChecking>true</disableCastChecking>
                        <style>${gwt.style}</style>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>compile</phase>
                            <configuration>
                                <extraJvmArgs>-XX:MaxPermSize=200m -Xmx600m -Xss2m</extraJvmArgs>
                            </configuration>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>
</project>